# docgen

./: .gitignore  pyproject.toml
docgen/: cli.py
docgen/backends/express/: package-lock.json  package.json  parser.js  parser.py  utils.js
docgen/backends/flask/: parser.py  path_utils.py
docgen/core/: generator.py  loader.py  writer.py
docgen/templates/: base.html  markdown.j2
docs/: API_DOCS.md
docs/express/: API_DOCS.md  index.html  script.js  styles.css
docs/flask/: API_DOCS.md
examples/express/: app.js
examples/flask/: app.py
tests/: test_express_parser.py  test_flask_parser.py
