[project]
name = "docgen"
version = "0.1.0"
description = "Backend API documentation generator"
authors = [
    {name = "Tudor230",email = "133231902+Tudor230@users.noreply.github.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = "^3.10"
dependencies = [
    "typer (>=0.16.0,<0.17.0)",
    "jinja2 (>=3.1.6,<4.0.0)",
    "rich (>=14.1.0,<15.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
